# pr2_pbd

./: .coveralls.yml  .travis.yml  README.md  TODO.md  packages.txt  requirements.txt
pr2_arm_control/: CMakeLists.txt  README.md  package.xml  setup.py
pr2_arm_control/config/: pr2_arm_control.rviz  sensors_kinect.yaml
pr2_arm_control/include/pr2_arm_control/: normal_buffer.h
pr2_arm_control/launch/: arm_control_backend.launch  arm_control_frontend.launch  fake_frames.launch  move_group.launch  pr2_moveit_sensor_manager.launch.xml  sensor_manager.launch.xml
pr2_arm_control/nodes/: arm_control_node.py
pr2_arm_control/src/: clear_octomap_server.cpp  clicked_point_with_normal_node.cpp  normal_buffer.cpp
pr2_arm_control/src/pr2_arm_control/: arm.py  arm_control_marker.py  arm_controls.py
pr2_pbd/: CMakeLists.txt  package.xml
pr2_pbd_gui/: CMakeLists.txt  package.xml
pr2_pbd_gui/src/pr2_pbd_gui/: pbd_gui.py
pr2_pbd_interaction/: CMakeLists.txt  manifest.xml  package.xml  setup.py
pr2_pbd_interaction/config/: pr2_pbd.rviz
pr2_pbd_interaction/launch/: pbd_backend.launch  pbd_backend_prereqs.launch  pbd_demo_desktop.launch  pbd_demo_robot.launch  pbd_frontend.launch
pr2_pbd_interaction/msg/: ArmTarget.msg  ArmTrajectory.msg  ExperimentState.msg  GripperAction.msg  Object.msg
pr2_pbd_interaction/nodes/: main.py  pbd_node.py
pr2_pbd_interaction/scripts/: test_and_coverage.sh
pr2_pbd_interaction/src/: ActionStepMarker.py  Arm.py  Arms.py  Interaction.py  ProgrammedAction.py  Response.py  RobotSpeech.py  Session.py  World.py  action_step_marker.py  arm.py  arms.py  interaction.py  programmed_action.py  response.py  robot_speech.py  session.py  world.py
pr2_pbd_interaction/src/pr2_pbd_interaction/: action_step_marker.py  arm.py  arms.py  interaction.py  programmed_action.py  response.py  session.py  world.py
pr2_pbd_interaction/test/: test_endtoend.py  test_endtoend.test  test_endtoend_robot.test  tests_endtoend.py
pr2_pbd_speech_recognition/: CMakeLists.txt  manifest.xml  package.xml
pr2_pbd_speech_recognition/msg/: Command.msg
pr2_pbd_speech_recognition/nodes/: recognize_commands.py
pr2_social_gaze/: CMakeLists.txt  package.xml
pr2_social_gaze/nodes/: social_gaze.py
tabletop_object_detector/: CMakeLists.txt
