<?xml version="1.0"?>
<package>
  <name>pr2_pbd</name>
  <version>0.0.0</version>
  <description>The pr2_pbd package</description>

  <maintainer email="mayacakmak@github.com">Maya Cakmak</maintainer>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>pr2_pbd_gui</run_depend>
  <run_depend>pr2_pbd_interaction</run_depend>
  <run_depend>pr2_pbd_speech_recognition</run_depend>
  <run_depend>pr2_social_gaze</run_depend>

  <export>
       <metapackage/>
  </export>
</package>
