<package>
  <name>pr2_social_gaze</name>
  <version>1.0.0</version>
  <description>pr2_social_gaze</description>
  <maintainer email="">Maya Cakmak</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/pr2_social_gaze</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Maya Cakmak</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>actionlib</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>kinematics_msgs</build_depend>
  <build_depend>pr2_mechanism_controllers</build_depend>
  <build_depend>pr2_mechanism_msgs</build_depend>
  <build_depend>pr2_controllers_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>actionlib</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>kinematics_msgs</run_depend>
  <run_depend>pr2_mechanism_controllers</run_depend>
  <run_depend>pr2_mechanism_msgs</run_depend>
  <run_depend>pr2_controllers_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>actionlib</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>kinematics_msgs</test_depend> -->
  <!-- <test_depend>pr2_mechanism_controllers</test_depend> -->
  <!-- <test_depend>pr2_mechanism_msgs</test_depend> -->
  <!-- <test_depend>pr2_controllers_msgs</test_depend> -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->

</package>
